--- a/src/components/HomePage/CatFact/CatFact.css
+++ b/src/components/HomePage/CatFact/CatFact.css
@@ -1,4 +1,4 @@
-.container {
+.catFactContainer {
   background-color: #3B719F;
   position: absolute;
   left: 0px;
@@ -7,18 +7,18 @@
   color: white;
 }
 
-.card {
+.catFactCard {
   display: flex;
   width: 45%;
   margin: 10px;
 }
 
-.box {
+.catFactBox {
   width: 100%;
   max-height: 100%;
 }
 
-.catFact {
+.catFactText {
   color: #1f1f1f;
   padding: 15px;
 }
