--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,15 +2,31 @@
   background: #3B719F;
 }
 
-.links {
+.navBarMenuItem {
   color: white;
+  background: #3B719F;
+  width: 150px;
+  height: 50px;
+  white-space: nowrap;
 }
 
-.links:hover {
-  color: black;
+.navBarMenuItem:hover {
+  background: white;
+  border: 1px solid white;
+  color: black
 }
 
+.navBarHome {
+  float: left;
+}
 
-.profile {
+.navBarProfile {
   float: right;
+}
+
+.navBarLogo {
+  width: 45px;
+  /*   margin-bottom: 0; */
+  float: left;
+  color: white;
 }
